# kuber-tauri

./: package-lock.json  package.json  run_with_mock.bat  tsconfig.json  vite.config.ts
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  kuber.rs  main.rs
src/lib/: Greet.svelte  Logger.svelte  Logger.test.ts  Tabs.svelte  tabs.d.ts  tauri.ts
