[package]
name = "kuber-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# kubernetes
kube = { version = "0.80.0", default-features = false, features = ["client", "derive", "rustls-tls"] }
# kube = { version = "0.80.0", features = ["runtime", "derive"] }
# openssl = { version = "0.10", features = ["vendored"] }
k8s-openapi = { version = "0.17.0", features = ["v1_23"] }
tokio = {version = "*", features = ["full"] }
futures = "*"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
mock = []
